<resources>
    <string name="syndrive">SYNDRIVE</string>
    <string name="partner">PARTNER</string>
    <string name="app_name">SyndriveAmbulance</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User? Sign Up</string>
    <string name="user_name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_btn_register">Register</string>
    <string name="existing_login">Already an existing member? Login</string>
    <string name="phone">Phone</string>
    <string name="looking_for_sos_app">Looking for the SOS App?</string>
    <string name="title_activity_welcome">Map</string>
    <string name="find_user">Find User</string>
    <string name="enter_pickup">Enter Pickup Location</string>
    <string name="go">Go</string>
</resources>
