<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ambulance_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/syndrive"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textAlignment="center"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/partner"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tvSOSApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/looking_for_sos_app"
        android:textColor="@color/bottomText"
        android:textSize="12sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/tvSOSApp"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/btnLogin"
            android:background="@drawable/btn_login_background"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:layout_marginEnd="6dp"
            />
        <Button
            android:id="@+id/btnRegister"
            android:background="@drawable/btn_register_background"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hint_btn_register"
            android:textColor="@color/btnRegister"
            android:layout_marginStart="6dp"
            />

    </LinearLayout>
</RelativeLayout>